--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,4 +1,4 @@
 @import "reset.css";/* сбрoc настроек браузера */
-@import "layout.css"; /* макет  */
+@import "fonts.css"; /* макет  */
 @import "content.css"; /* контент / содержимое  */
 @import "responsive.css";/* адаптивность */
