--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -1,9 +1,10 @@
 body {
     background-color: #121212;
     overflow: hidden;
-    height: 100vh;
+    /*height: 100vh;*/
     width: 100vw;
     background-image: url("../img/columns.svg");
+    background-size: cover;
 }
 
 .title {
@@ -23,8 +24,8 @@ body {
 .workspaceOne {
     padding-left: 5.20vw;
     padding-right: 5.20vw;
-    height: 100vh;
-    position: absolute;
+    /*height: 100vh;*/
+    position: relative;
     z-index: 5;
 }
 
@@ -32,7 +33,7 @@ body {
     display: inline-block;
     position: relative;
     margin-top: 12.5vh;
-    width: 100vw;
+    /*width: 100vw;*/
     vertical-align: top;
 }
 
@@ -60,7 +61,7 @@ body {
     display: inline-block;
     position: relative;
     margin-top: 12.5vh;
-    width: 100vw;
+    /*width: 100vw;*/
     vertical-align: top;
 }
 
@@ -95,7 +96,7 @@ body {
 .runLine {
     width: 100vw;
     z-index: 1;
-    position: absolute;
+    position: relative;
     overflow: hidden;
 
 }
